# 13E114MUPS

./: .gitignore  LICENSE  MPS_DZ1_ia130010d.pages
MPS_DZ1_OpenMP/jacobi/: CMakeLists.txt  Makefile  jacobi.c  run
MPS_DZ1_OpenMP/kmeans/: Makefile  cluster.c  getopt.c  getopt.h  kmeans.c  kmeans.h  openmp_cluster.c  openmp_kmeans_clustering.c  run
MPS_DZ1_OpenMP/sgemm/: .gitignore  CMakeLists.txt  Makefile  run  sgemm.cc
